--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "type": "module",
   "engines": { "node": ">=18.0.0" },
   "scripts": { "start": "node server.js" },
-  "dependencies": { "express": "^4.19.2" }
+  "dependencies": {
+    "express": "^4.19.2",
+    "dotenv": "^16.4.5"
+  }
 }
