--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "engines": { "node": ">=18.0.0" },
   "scripts": { "start": "node server.js" },
-  "dependencies": {
-    "express": "^4.19.2",
-    "dotenv": "^16.4.5"
+  "dependencies": "dependencies": {
+  "express": "^4.19.2",
+  "dotenv": "^16.4.5",
+  "multer": "^1.4.5-lts.1",
+  "pdf-parse": "^1.1.1",
+  "mammoth": "^1.6.0"
   }
 }
