--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "engines": { "node": ">=18.0.0" },
   "scripts": { "start": "node server.js" },
-  "dependencies": "dependencies": {
+  "dependencies": {
   "express": "^4.19.2",
   "dotenv": "^16.4.5",
   "multer": "^1.4.5-lts.1",
