--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "glavbuh-chat-widget",
   "version": "0.1.0",
   "type": "module",
-  "engines": { "node": ">=18.0.0" },
-  "scripts": { "start": "node server.js" },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "postinstall": "true"
+  },
   "dependencies": {
-  "express": "^4.19.2",
-  "dotenv": "^16.4.5",
-  "multer": "^1.4.5-lts.1",
-  "pdf-parse": "^1.1.1",
-  "mammoth": "^1.6.0"
+    "express": "^4.19.2",
+    "dotenv": "^16.4.5",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "1.1.1",
+    "mammoth": "^1.6.0"
   }
 }
