--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "postinstall": "true"
   },
   "dependencies": {
-    "express": "^4.19.2",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mammoth": "^1.6.0",
     "multer": "^1.4.5-lts.1",
-    "pdf-parse": "1.1.1",
-    "mammoth": "^1.6.0"
+    "pdfjs-dist": "^4.6.82"
   }
 }
