--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 RESEND_API_KEY=re_re_8Ms5fmzV_7TnBBYQswyR3dJkC8iGMeRMc
-FROM_EMAIL=onboarding@resend.dev
+FROM_EMAIL=noreply@mail.glavbuh-chat.ru
 OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxx
 NODE_ENV=development
