--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-RESEND_API_KEY=re_WoANNbjk_BmkAFJNvzn1w62YTRosUfqFz
-FROM_EMAIL=noreply@glavbuh-chat.ru
-OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxx
-NODE_ENV=development
+.env
+*.env
+.env.local
+.env.production
